  foreach then the closure will be called continuously until a $null
  is returned.
- added a few functions for performing set type operations on @arrays
  @ removeAll(@a, @b) - modifies @a with the difference of @a - @b
  @ addAll(@a, @b) - modifies @a with the union of @a + @b
  @ retainAll(@a, @b) - modifies @a to contain the intersection of @a and @b


2.1-beta 1
===========
- fixed the clean target in the sleep build.xml file
- added a continue keyword for flow control of while/for/foreach
  loops.  My arm hath been twisted.
- rewrote the interpreter to use stack frames instead of a single
  environment stack for all temporary calculations...  this could 
  create bugs and needs lots and lots of testing.
- fixed bug related to using a function call within an array/hash 
  index
- added coroutines to the sleep language, this consists of a yield
  keyword (works like return that exits a closure at that point.  
  Next time said closure is called execution resumes at the point
  where you last yielded from.
- did massive reworking of the sleep interpreter to allow for
  coroutines (this had some benefits as well including the ability
  for bridge writers to track bridge data by script context).
- oops, fixed broken ^ operator (bridge was written wrong, thanks
  to Ralph Becker for catching this one).
- remove() with no parameters will remove the current array element
  in a foreach loop (this only works on arrays, not hashes).
- fixed bugs with iswm algorithm when wildcard pattern is longer 
  than the text it is being compared against.
- updated isMatch/hasMatch/matched to use the new context meta
  data feature to keep tracker of matchers (the old way was not
  thread safe)
- for loop initialization and increment terms can now be empty
- added SleepUtils.getScalar(x) for Java shorts and floats
- opted to distribute documentation as HTML instead of PDF...

2.0-release
===========
- added a -version, -v, --version command line switch to see what